@@ -42,17 +42,18 @@ int action_handler(Reaction *_self) {
   printf("Action = %d\n", self->my_action.value);
   self->my_action.next_value = self->cnt++;
   tag_t tag = {.time = self->super.env->current_tag.time + 1, .microstep = 0};
-  self->my_action.super.schedule_at((Trigger *)&self->my_action.super, tag);
+  self->my_action.super.schedule_at(&self->my_action.super, tag);
   return 0;
 }
 
 void MyReaction_ctor(MyReaction *self, Reactor *parent) {
   Reaction_ctor(&self->super, parent, action_handler, self->effects, 1);
+  self->super.level = 0;
 }
 
 void MyReactor_ctor(struct MyReactor *self, Environment *env) {
   self->_reactions[0] = (Reaction *)&self->my_reaction;
-  self->_triggers[0] = (Trigger *)&self->my_reaction;
+  self->_triggers[0] = (Trigger *)&self->startup;
   self->_triggers[1] = (Trigger *)&self->my_action;
   Reactor_ctor(&self->super, env, NULL, 0, self->_reactions, 1, self->_triggers, 2);
   MyAction_ctor(&self->my_action, &self->super);
@@ -66,11 +67,9 @@ void MyReactor_ctor(struct MyReactor *self, Environment *env) {
 }
 
 struct MyReactor my_reactor;
-Reactor *reactors[] = {(Reactor *)&my_reactor};
 Environment env;
-
 int main() {
-  Environment_ctor(&env, reactors, 1);
+  Environment_ctor(&env, (Reactor *)&my_reactor);
   MyReactor_ctor(&my_reactor, &env);
   env.assemble(&env);
   env.start(&env);
