@@ -7,8 +7,7 @@
 typedef struct Environment Environment;
 
 struct Environment {
-  Reactor **reactors;
-  size_t reactors_size;
+  Reactor *main;
   Scheduler scheduler;
   tag_t current_tag;
   bool keep_alive;
@@ -17,7 +16,7 @@ struct Environment {
   int (*wait_until)(Environment *self, instant_t wakeup_time);
 };
 
-void Environment_ctor(Environment *self, Reactor **reactors, size_t reactors_size);
+void Environment_ctor(Environment *self, Reactor *main);
 void Environment_assemble(Environment *self);
 void Environment_start(Environment *self);
 
